# PROTEUS

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  1653_atm.pkl  404.html  AGENT.md  AGENTS.md  BHAC15-M0p090000.txt  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  ClimateGraphicsMPL.py  ClimateUtilities.py  CouplerMain.py  DOCKER_CI_README.md  Dockerfile  FINAL_UPLOAD_STATUS.md  Flux.eps  GGRadConv.py  GeneralRadConv.py  GreyHeat.py  Heating.eps  INSTALL.md  LICENSE.txt  MEMORY.md  MISSING_DEPENDENCIES.md  OLRFlux.txt  OSF_UPLOAD_INSTRUCTIONS.md  PR591_REVIEW_ASSESSMENT.md  PROTEUS.env  PR_SUMMARY.md  README-BHAC.txt  README.md  ROBUSTNESS_TEST_RESULTS.md  RadInteriorCoupler.py  ReadInterior.py  STELLAR_DATA_MIRROR_SETUP.md  (+128 more)
.claude/: settings.local.json
.github/: AGENT.md  CODEOWNERS  copilot-instructions.md  copilot-memory.md  data-manifest.yaml  pull_request_template.md
auto/: status
badge_payload/: tests-integration.json  tests-total.json  tests-unit.json
cmake_build/: build_spider.bash  build_spider.bash.in  cmake_install.cmake  fastchem_build.bash.in  fastchem_compiler.bash  petsc_build.bash.in  print_arch.bash  scrape_petsc_make.bash  soc_exes.cmake  socrates_build.bash.in
constants/: phys.py
docs/: ai_usage.md  architecture.md  bibliography.md  ci_status_and_roadmap.md  config.md  config_old.md  contact.md  data.md  diataxis_restructure_plan.md  docker_ci_architecture.md  funding.md  getting_started.md  habrok_cluster_guide.md  index.md  inference.md  installation.md  kapteyn_cluster_guide.md  local_machine_guide.md  macros.py  model.md  requirements.txt  self_healing_ci.md  snellius_cluster_guide.md  submodules.md  test_building.md  test_building_strategy.md  test_categorization.md  test_infrastructure.md  testing_infrastructure.md  tips_kapteyn_cluster.md  tips_snellius_cluster.md  troubleshooting.md  usage.md  user_install.md  validation.md
examples/: examples_readme.txt  readme.txt
inference/: README.md
input/: BHAC15-M0p100000.txt  BHAC15-M0p150000.txt  BHAC15-M0p700000.txt  BHAC15-M1p000000.txt  _stars.txt  albedo_test.toml  albedo_test_cloudfree.toml  all_options.toml  all_options_spider.toml  aragog.toml  aragog_EOS_lookup_test.toml  aragog_EOS_lookup_test_custom.toml  aragog_EOS_lookup_test_linear.toml  case196.cfg  case344.cfg  case_00002.toml  debug_allow_heating.cfg  debug_bisection.cfg  debug_dynamicsteps.cfg  debug_replicate.cfg  default.cfg  default.toml  default_aragog.toml  demo_earth.cfg  demo_earth_rce.cfg  dummy.cfg  dummy.toml  dummy2.cfg  dummy_aragog.toml  dummy_star.toml  earth_carbon.cfg  earth_gridtest.cfg  earth_header.cfg  earth_mixed.cfg  earth_mixed_rce.cfg  earth_steam.cfg  earth_steam_rce.cfg  escape.cfg  escape.toml  example.grid.toml  (+52 more)
input_new/: default.toml  dummy.toml  escape.toml  hd63433d.toml  jgr_grid.toml  ltt3780b.toml  t1c.toml
luminosity_tracks/: Lum_m0.10.txt  Lum_m0.2.txt  Lum_m0.6.txt  Lum_m0.8.txt  Lum_m1.0.txt  Lum_m1.2.txt  Lum_m1.4.txt  plot_luminosity_tracks.py
old/: GreyHeat.py  phys.py
paper/: paper.bib  paper.html  paper.md
play_dummy/: BO.py  BO_obj_contour.py  BO_utils.py  acquisition.py  batch_BO.ipynb  batch_BO.py  commands.txt  error_config.txt  gen_synth.py  main.py  objectives.py  run_parallel.py  run_wrapper.py  sample_data.py  scarp.py  scrap.ipynb  simple_BO.ipynb  utils.py
plot/: cpl_atmosphere.py  cpl_atmosphere_cbar.py  cpl_elements.py  cpl_escape.py  cpl_fluxes.py  cpl_fluxes_atmosphere.py  cpl_fluxes_global.py  cpl_global.py  cpl_heatingrates.py  cpl_interior.py  cpl_interior_cbar.py  cpl_interior_cmesh.py  cpl_observables.py  cpl_offchem_grid_cross.py  cpl_offchem_species.py  cpl_offchem_time.py  cpl_offchem_year.py  cpl_sflux.py  cpl_sflux_cross.py  cpl_stacked.py  offline_chemistry.ipynb  plot_atmosphere.py  plot_global.py  plot_interior.py  plot_stacked.py
plot_escape_comparison/: plot_start_time_escape.py  verification_computation_escape.py
plots/: plot_SPIDER_output.py
plotting_tools/: plot_atmosphere.py  plot_interior.py
post_processing_grids/: post_processing_grid.py
scripts/: gen_paleos_melting_curves.py  gen_paleos_v1_1_0_validation_configs.py  gen_paper_eos_compare_v2_configs.py  jax_dopri5_tableau_probe.py  jax_dtmax_sweep.py  jax_event_newton_sweep.py  jax_numpy_eos_parity.py  jax_numpy_structure_parity.py  jax_numpy_structure_parity_smooth.py  jax_tsit5_tolerance_sweep.py  launch_main_run.sh  launch_paleos_v1_1_0_validation.sh  launch_paper_eos_compare_v2.sh  launch_paper_eos_compare_v21.sh  launch_redox_run.sh  migrate_aragog_backend.py  numpy_picard_tolerance_sweep.py  numpy_tolerance_sanity.py  preflight_main_env.sh  preflight_redox_env.sh  regression_static_mode.py  repro_ic_mint_delta.py  repro_ic_two_calls.py  single_shot_ode_parity.py  v21_coverage_check.py  verify_liquidus_super_ic.py  z01_verify_jax_numpy_parity.py  z02_parity_multi_state.py  z03_jacobian_check.py  z04_jacobian_multi_state.py  z05_localise_jacobian_nan.py  z06_phase_state_jacobian.py  z07_compute_fluxes_jacobian.py  z08_compute_mlt_jacobian.py  z09_cvode_with_jax_jacobian.py
search/: search_index.json
selfheal/: extract_failures.py  prompt-template.txt
socrates/: Mk_cmd  readme.md
spectral-files/: co2_m  pt48  sp_spider_3000K_300  sp_spider_3000K_300_k
test_escape/: plot_to_compare_dummy_and_escape.py  plots_grid_sim.py  runtime_helpfile_zephyrus.csv
tests/: conftest.py  test_albedo_lookup.py  test_cli.py  test_config.py  test_cpl_colours.py  test_cpl_helpers.py  test_doctor.py  test_escape_boreas.py  test_init.py  test_installer.py  test_proteus.py  test_readme_badges.py  test_redox_scaffolding.py  test_stellar_spectra.py
tools/: .nfs0000000001095c4100006b07  BaraffeEvolve.py  Check_steadystate_progress.ipynb  CleanSocrates.sh  DebugSolveVAmc.py  EvolveStellarSpectrum.py  GetStellarSpectrum.py  GridOfflineChemistry.py  GridPROTEUS.py  GridPROTEUS2.py  GridPROTEUS_escape.py  GridSummarise.py  MakeExample.sh  PlotNetCDFs.ipynb  PostprocHighres.jl  Postprocess.jl  PostprocessGrid.jl  README.md  (+94 more)
(+4279 files in other folders)
